изменение через вскод

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>GIT урок 2</h1>
     <p>новое изменение файла index.html</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ex qui quibusdam blanditiis expedita adipisci quidem nobis, libero neque quisquam?</p>
+    <p>blablabla</p>
 </body>
 </html>
