--- a/12_homework/index.html
+++ b/12_homework/index.html
@@ -320,7 +320,7 @@
                     </button>-->
                     <div class="submit">
                     <input type="submit" name="submit" class="footer__btn" disabled="" value="Отправить данные" />
-                    <input type="checkbox" id="politics" onclick="check();" value="" autocomplete="off"/>
+                    <input type="checkbox" id="politics" onclick="check();" value="">
                     <a href="ссылка на страницу согласия" class="submit__text">Согласен на обработку данных.</a>
                     </div>
                     
