--- a/new_project/index.html
+++ b/new_project/index.html
@@ -9,9 +9,10 @@
 </head>
 <body>
     <header class="header">
-        <div class="header-container">
-            <div class="header-row">
+        <div class="container header-container">
+            
             <img class="header__logo" src="img/header/logo_1.png" alt="">
+
             <ul class="header__nav">
                 <li class="header__nav-item">
                     <a class="header__nav-link" href="">О нас</a>
@@ -29,22 +30,30 @@
                     <a class="header__nav-link" href="">Контакты</a>
                 </li>
             </ul>
-            <a href="">
-                <div class="header__search"></div>
+
+            <a class="header__search" href="">
+                <div class="header__search-link"></div>
             </a>
-            </div>
-            <div class="container">
-            <div class="banner">
-                <h1 class="banner__title">Проектные решения любой сложности</h1>
+            
+        </div>
+    </header>
+
+    <main>
+        <section class="banner">
+            <div class="container bannner-container">
+                <h1 class="banner__title">
+                    Проектные решения любой сложности
+                </h1>
                 <p class="banner__subtitle">
                     Есть над чем задуматься: базовые сценарии поведения пользователей и по сей день остаются уделом проектантов
                 </p>
-                <div class="banner__link">   
-                    <a class="banner__link-text" href="">Заказать расчет</a>
+                <div class="banner__btn">
+                    <div class="banner__btn-link">
+                        Заказать расчет
+                    </div>
                 </div>
             </div>
-        </div>
-        </div>
-    </header>
+        </section>
+    </main>
 </body>
 </html>
