заново написана шапка+2 блока

--- a/new_project/index.html
+++ b/new_project/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Евклид Проектные системы</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
@@ -37,7 +39,7 @@
             
         </div>
     </header>
-
+<!--
     <main>
         <section class="banner">
             <div class="container bannner-container">
@@ -55,5 +57,6 @@
             </div>
         </section>
     </main>
+-->
 </body>
 </html>
