как мы работаем + вопросы

--- a/new_project (2)/index.html
+++ b/new_project (2)/index.html
@@ -51,72 +51,116 @@
       </div>
     </header>
 
-    <main>
-      <section class="banner">
-        <div class="container">
-          <!--почему пришлось создать новый блок внутри, а не микс классов;
-          при миксе съезжала верстка блока-->
-          <div class="banner-container">
-          <h1 class="banner__title">
-            Проектные решения любой сложности
-          </h1>
-          <p class="bannner__subtitle">
-            Есть над чем задуматься: базовые сценарии поведения пользователей и по сей день остаются уделом проектантов
-          </p>
-          <a href="#" class="banner__link link">
-            Заказать расчёт
-          </a>
-        </div>
-      </div>
+    <main class="main container">
+      <h1 class="visually-hidden">Проектные системы Евклид</h1>
+      <section class="main__banner banner">
+          <h2 class="banner__title">Проектные решения любой сложности</h2>
+          <p class="bannner__subtitle">Есть над чем задуматься: базовые сценарии поведения пользователей и по сей день остаются уделом проектантов</p>
+          <a href="#" class="banner__link link">Заказать расчёт </a>
       </section>
 
-      <section class="about">
-        <div class="container">
-          <h2 class="about__title title">
-            О нас
-          </h2>
-          <p class="about__subtitle">
-            Также как перспективное планирование создаёт необходимость включения в производственный план целого ряда внеочередных мероприятий с учётом комплекса экспериментов, поражающих по своей масштабности и грандиозности. А также диаграммы связей могут быть описаны максимально подробно. Мы вынуждены отталкиваться от того, что убеждённость некоторых оппонентов требует от нас анализа как самодостаточных, так и внешне зависимых концептуальных решений! Следует отметить, что высококачественный прототип    <span class="tooltip"></span>   будущего проекта предопределяет высокую востребованность позиций, занимаемых участниками в отношении поставленных задач. Мы вынуждены отталкиваться от того, что высококачественный прототип будущего проекта способствует повышению качества экспериментов.
-          </p>
+      <section class="main__about about">
+          <h3 class="about__title title"> О нас </h3>
+          <p class="about__subtitle"> Также как перспективное планирование создаёт необходимость включения в производственный план целого ряда внеочередных мероприятий с учётом комплекса экспериментов, поражающих по своей масштабности и грандиозности. А также диаграммы связей могут быть описаны максимально подробно. Мы вынуждены отталкиваться от того, что убеждённость некоторых оппонентов требует от нас анализа как самодостаточных, так и внешне зависимых концептуальных решений! Следует отметить, что высококачественный прототип    <span class="about__tooltip">будущего</span>проекта предопределяет высокую востребованность позиций, занимаемых участниками в отношении поставленных задач. Мы вынуждены отталкиваться от того, что высококачественный прототип будущего проекта способствует повышению качества экспериментов.</p>
           <div class="about__row">
             <div class="about__column column-left">
               <div class="column-left__shadow">
-              <div class="column-left__text">
-                Принимая во внимание показатели успешности, перспективное планирование способствует подготовке и реализации новых принципов.
-              </div>
-              <a class="column-left__link link" href="#">
-                Подробнее
-              </a>
+              <p class="column-left__text"> Принимая во внимание показатели успешности, перспективное планирование способствует подготовке и реализации новых принципов.</p>
+              <a class="column-left__link link" href="#">Подробнее</a>
               </div>
             </div>
             <div class="about__column column-right">
-              <div class="column-right__item">
-                <div class="column-right__icon column-right__icon-top">
-                </div>
-                <div class="column-right__text">
-                  <h3 class="column-right__title">
-                    Консультация с широким активом
-                  </h3>
-                  <p class="column-right__description">
-                    А также свежий взгляд на привычные вещи - безусловно открывает новые горизонты для как самодостаточных, так и внешне зависимых концептуальных решений.
-                  </p>
-                </div>
+              <div class="column-right__item column-right__item--background-top">
+                  <h4 class="column-right__title">Консультация с широким активом</h4>
+                  <p class="column-right__description">А также свежий взгляд на привычные вещи - безусловно открывает новые горизонты для как самодостаточных, так и внешне зависимых концептуальных решений.</p>
               </div>
-              <div class="column-right__item">
-                <div class="column-right__icon column-right__icon-bottom">
-                </div>
-                <div class="column-right__text">
-                  <h3 class="column-right__title">
-                    В своём стремлении повысить
-                  </h3>
-                  <p class="column-right__description">
-                    Качество жизни, они забывают, что сплочённость команды профессионалов представляет собой интересный эксперимент проверки прогресса профессионального сообщества.
-                  </p>
-                </div>
+              <div class="column-right__item column-right__item--background-bottom">
+                  <h4 class="column-right__title">В своём стремлении повысить</h4>
+                  <p class="column-right__description">Качество жизни, они забывают, что сплочённость команды профессионалов представляет собой интересный эксперимент проверки прогресса профессионального сообщества.</p>
               </div>
             </div>
           </div>
+      </section>
+
+      <section class="main__works works">
+        <h3 class="works__title title">Как мы работаем</h3>
+        <ul class="works__list list">
+          <li class="works__item">
+            <a href="" class="works__item-link link"> 1 шаг</a>
+          </li>
+          <li class="works__item">
+            <a href="" class="works__item-link link"> 2 шаг </a>
+          </li>
+          <li class="works__item">
+            <a href="" class="works__item-link link"> 3 шаг</a>
+          </li>
+          <li class="works__item">
+            <a href="" class="works__item-link link"> 4 шаг </a>
+          </li>
+        </ul>
+        <div class="works__row">
+          <div class="works__column block-left">
+            <h4 class="block-left__title">Проводим консультацию</h4>
+            <p class="block-left__description">Влечет за собой процесс внедрения и модернизации приоритизации разума над эмоциями. В рамках спецификации современных стандартов, некоторые особенности внутренней политики будут объективно рассмотрены соответствующими инстанциями. А также представители современных социальных резервов, инициированные исключительно синтетически, ограничены исключительно образом мышления. Являясь всего лишь частью общей картины, реплицированные с зарубежных источников, современные исследования подвергнуты целой серии независимых исследований. Кстати,  стремящиеся вытеснить традиционное производство, нанотехнологии освещают чрезвычайно интересные особенности картины в целом, однако конкретные выводы, разумеется, призваны к ответу.</p>
+            <div class="block-left__row row-link">
+              <a href="" class="row-link__information link">Подробнее</a>
+              <a href="" class="row-link__contract link">Договор</a>
+            </div>
+          </div>
+          <div class="works__column block--right"></div>
         </div>
+
+      </section>
+
+      <section class="main__faq faq">
+        <h3 class="faq__title title">Часто задаваемые вопросы</h3>
+        <ul class="faq__list list">
+          <li class="faq__item">
+            <h4 class="faq__item-title"> Из чего формируется конечная стоимость проекта?</h4>
+            <a href="" class="faq__icon">
+              <svg width="50" height="50" viewbox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <ellipse class="faq__icon-ellipse" cx="25" cy="25" rx="25" ry="25" fill="#ECECEC"/>
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M25.0571 24.0571L25.0571 9L25.9429 9L25.9429 24.0571L33.8835 24.0571L41 24.0571L41 24.9429L25.9429 24.9429L25.9429 40L25.0571 40L25.0571 24.9429L10 24.9429L10 24.0571L25.0571 24.0571Z" fill="#666666"/>
+              </svg>
+            </a>
+          </li>
+          <li class="faq__item">
+            <h4 class="faq__item-title"> У меня есть свой проект. Сможем ли мы его доработать / реализовать? </h4>
+            <a href="" class="faq__icon">
+              <svg width="50" height="50" viewbox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <ellipse class="faq__icon-ellipse" cx="25" cy="25" rx="25" ry="25" fill="#ECECEC"/>
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M25.0571 24.0571L25.0571 9L25.9429 9L25.9429 24.0571L33.8835 24.0571L41 24.0571L41 24.9429L25.9429 24.9429L25.9429 40L25.0571 40L25.0571 24.9429L10 24.9429L10 24.0571L25.0571 24.0571Z" fill="#666666"/>
+              </svg>
+            </a>
+          </li>
+          <li class="faq__item">
+            <h4 class="faq__item-title"> Я выбираю между разными компаниями. В чём ваше отличие? </h4>
+            <a href="" class="faq__icon">
+              <svg width="50" height="50" viewbox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <ellipse class="faq__icon-ellipse" cx="25" cy="25" rx="25" ry="25" fill="#ECECEC"/>
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M25.0571 24.0571L25.0571 9L25.9429 9L25.9429 24.0571L33.8835 24.0571L41 24.0571L41 24.9429L25.9429 24.9429L25.9429 40L25.0571 40L25.0571 24.9429L10 24.9429L10 24.0571L25.0571 24.0571Z" fill="#666666"/>
+              </svg>
+            </a>
+          </li>
+          <li class="faq__item">
+            <h4 class="faq__item-title"> Могу ли я делегировать вам работу / согласование с подрядчиком / организацией?  </h4>
+            <a href="" class="faq__icon">
+              <svg width="50" height="50" viewbox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <ellipse class="faq__icon-ellipse" cx="25" cy="25" rx="25" ry="25" fill="#ECECEC"/>
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M25.0571 24.0571L25.0571 9L25.9429 9L25.9429 24.0571L33.8835 24.0571L41 24.0571L41 24.9429L25.9429 24.9429L25.9429 40L25.0571 40L25.0571 24.9429L10 24.9429L10 24.0571L25.0571 24.0571Z" fill="#666666"/>
+              </svg>
+            </a>
+          </li>
+          <li class="faq__item">
+            <h4 class="faq__item-title"> Могу ли я вернуть деньги на каком-либо из этапов работ? </h4>
+            <a href="" class="faq__icon">
+              <svg width="50" height="50" viewbox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <ellipse class="faq__icon-ellipse" cx="25" cy="25" rx="25" ry="25" fill="#ECECEC"/>
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M25.0571 24.0571L25.0571 9L25.9429 9L25.9429 24.0571L33.8835 24.0571L41 24.0571L41 24.9429L25.9429 24.9429L25.9429 40L25.0571 40L25.0571 24.9429L10 24.9429L10 24.0571L25.0571 24.0571Z" fill="#666666"/>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </section>
     </main>
 </body>
